Use openjdk Debug class (#235)
This update eliminates the use of the last existing class in the
`com.ibm.misc` package, which is used for debug traces. Code will
for the time being make use of the `sun.security.util.Debug` class
instead.

The provider code that currently uses the `com.ibm.misc.Debug` class now
makes direct use of the `sun.security.util.Debug` class.

The test code that has more advanced use of the current `Debug` class
now contains its own copy of the `Debug` class that once resided in the
`com.ibm.misc` package.

Closes #225

Signed-off-by: Jason Katonica <katonica@us.ibm.com>